Fix styling on mobile

--- a/client/static/css/results.css
+++ b/client/static/css/results.css
@@ -8,7 +8,6 @@
 
 .chart-container {
     width: 500px;
-    height: 500px;
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -35,9 +34,10 @@ p+.short-result-list {
 }
 
 .short-result-list-item {
-    display: inline-flex;
+    display: flex;
     margin: 0.25em 2em;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .short-result-list-candidate {
@@ -53,6 +53,9 @@ p+.short-result-list {
 
 .short-result-list-value.longer {
     width: auto;
+    justify-content: end;
+    display: flex;
+    flex: 1 1 auto;
 }
 
 .result-positive {
